fix viewport height on mobile

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html[data-theme="dark"]{
     visibility: hidden;
 }
 body{
-    height: 95vh;
+    height: 95dvh;
     display: flex;
     flex-flow: column;
     background-color: var(--bg-color);
